fixed formatting issues, made js file, got color alignments

--- a/Develop/style.css
+++ b/Develop/style.css
@@ -34,7 +34,6 @@ textarea {
 
 .row {
   white-space: pre-wrap;
-  height: 80px;
   border-top: 1px solid white;
   text-align: center;
 }
